Refactor CopyOnWriteArrayListSample and add possible exceptions to comments where we used ArrayList instead